# taskflow

./: .gitignore  .lintstagedrc.js  .markdownlint.json  .prettierignore  .prettierrc  Makefile  README.md  commitlint.config.js  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.husky/: commit-msg  pre-commit
apps/api/: .dockerignore  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup-venv.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_migration.py
apps/api/app/: __init__.py  cache.py  database.py
apps/api/app/auth/: __init__.py  dependencies.py  jwt.py  routes.py
apps/api/app/core/: config.py  errors.py  exceptions.py  validation.py
apps/api/app/graphql/: __init__.py  context.py  schema.py
apps/api/app/graphql/resolvers/: __init__.py
apps/api/app/middleware/: rate_limit.py
apps/api/app/models/: __init__.py  task.py  user.py
apps/api/app/schemas/: auth.py
apps/api/app/services/: __init__.py  user_service.py
apps/web/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package.json  proxy.ts  vite.config.ts  vitest.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/app/signup/: page.tsx
apps/web/components/: ErrorBoundary.tsx
apps/web/lib/: providers.tsx
apps/web/lib/api/: client.ts  queries.ts
apps/web/lib/auth/: context.tsx  utils.ts
apps/web/lib/graphql/: client.ts  generated.ts  index.ts  mutations.ts  queries.ts
apps/worker/: .dockerignore  Dockerfile  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup-venv.sh
apps/worker/config/: __init__.py  settings.py
apps/worker/tasks/: __init__.py  analytics.py
