[tool.poetry]
name = "taskflow-worker"
version = "0.1.0"
description = "TaskFlow Celery worker"
authors = ["Guy Romelle Magayano <aspiredtechie2010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.4.0"
redis = { extras = ["hiredis"], version = "^5.2.0" }
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
structlog = "^24.4.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
